--- a/.env.sample
+++ b/.env.sample
@@ -1,9 +1,9 @@
 API_ID=12345
 API_HASH=abc123
 BOT_TOKEN=123:abc
-SUDO_USERS=123 356 789
+SUDO_USERS=287546210
 REPLY_MESSAGE=No PMs
 SESSION_STRING=session
-SUPPORT_GROUP=SafoTheBot
-UPDATES_CHANNEL=AsmSafone
-ASSISTANT_NAME=MyVideoPlayer
+SUPPORT_GROUP=kbfc_manjappada
+UPDATES_CHANNEL=Siyadthoughts
+ASSISTANT_NAME=Siyad
